<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/df_diaboutfile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="#FFFFFF"
        android:text="@string/aboutfile" />
    
    <TextView
        android:id="@+id/df_filename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:textColor="#FFFFFF"
        android:text="@string/filename" />

    <TextView
        android:id="@+id/df_filesize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:textColor="#FFFFFF"
        android:text="@string/filesize" />

    <TextView
        android:id="@+id/df_filetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:textColor="#FFFFFF"
        android:text="@string/filetime" />

    <TextView
        android:id="@+id/df_filepath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:textColor="#FFFFFF"
        android:text="@string/filepath" />

</LinearLayout>
