<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/line01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:paddingTop="8dp"
            android:text="@string/setviewmode"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:text="@string/showfull" >

            <TextView
                android:id="@+id/setviewfull"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/tvbkdark"
                android:gravity="center"
                android:text="@string/showfull"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/setviewwindow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/tvbkdark"
                android:gravity="center"
                android:text="@string/showwindow"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:paddingTop="8dp"
            android:text="@string/setplaymode"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:text="@string/showfull" >

            <TextView
                android:id="@+id/playlistend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/tvbkdark"
                android:gravity="center"
                android:text="@string/palylistend"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/playlistloop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/tvbkdark"
                android:gravity="center"
                android:text="@string/playlistloop"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:text="@string/showfull" >

            <TextView
                android:id="@+id/playsingleloop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/tvbkdark"
                android:gravity="center"
                android:text="@string/playsingleloop"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/playrandom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/tvbkdark"
                android:gravity="center"
                android:text="@string/playrandom"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:paddingTop="8dp"
            android:text="@string/managermusic"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:text="@string/showfull" >

            <TextView
                android:id="@+id/storeaddall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/but"
                android:gravity="center"
                android:text="@string/storeaddall"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/storecancleall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/but"
                android:gravity="center"
                android:text="@string/storecancleall"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:text="@string/showfull" >
            <TextView
                android:id="@+id/delallstore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/but"
                android:gravity="center"
                android:text="@string/delallstore"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/updatemusic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/but"
                android:gravity="center"
                android:text="@string/updatemusic"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />            
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_below="@id/line01"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/set_butcancel"
                android:layout_width="130sp"
                android:layout_height="wrap_content"
                android:text="@string/butcancel"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/set_butexit"
                android:layout_width="130sp"
                android:layout_height="wrap_content"
                android:text="@string/butexit"
                android:textColor="#FF0000"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>